--- a/sys-fs/e2fsprogs/ChangeLog
+++ b/sys-fs/e2fsprogs/ChangeLog
@@ -1,6 +1,20 @@
 # ChangeLog for sys-fs/e2fsprogs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.190 2009/07/01 14:41:03 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.192 2009/07/05 17:36:38 vapier Exp $
+
+  05 Jul 2009; Mike Frysinger <vapier@gentoo.org>
+  e2fsprogs-1.41.7-r1.ebuild:
+  Switch from gen_usr_ldscript to the root_libdir that the package supports
+  #276465 by Yury Vorobyov.
+
+*e2fsprogs-1.41.7-r1 (03 Jul 2009)
+
+  03 Jul 2009; Mike Frysinger <vapier@gentoo.org>
+  +files/0001-resize2fs-Fix-error-message-so-the-mountpoint-is-pri.patch,
+  +e2fsprogs-1.41.7-r1.ebuild:
+  Apply resize2fs fix from upstream #276352 by Matthias Schwarzott, fix
+  findfs building #275923 by Bernhard Hartleb, and tweak tex font handling
+  #261411.
 
 *e2fsprogs-1.41.7 (01 Jul 2009)
 
