--- a/virtual/perl-ExtUtils-CBuilder/ChangeLog
+++ b/virtual/perl-ExtUtils-CBuilder/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for virtual/perl-ExtUtils-CBuilder
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-CBuilder/ChangeLog,v 1.5 2009/06/30 06:25:22 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-ExtUtils-CBuilder/ChangeLog,v 1.8 2009/07/07 02:15:07 jer Exp $
+
+  07 Jul 2009; Jeroen Roovers <jer@gentoo.org>
+  perl-ExtUtils-CBuilder-0.23.ebuild:
+  Stable for HPPA too.
+
+*perl-ExtUtils-CBuilder-0.26.02 (05 Jul 2009)
+
+  05 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-ExtUtils-CBuilder-0.26.02.ebuild:
+  Version bump
+
+*perl-ExtUtils-CBuilder-0.26.01 (03 Jul 2009)
+
+  03 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-ExtUtils-CBuilder-0.26.01.ebuild:
+  Version bump
 
 *perl-ExtUtils-CBuilder-0.26 (30 Jun 2009)
 
