--- a/virtual/perl-Test-Simple/ChangeLog
+++ b/virtual/perl-Test-Simple/ChangeLog
@@ -1,6 +1,21 @@
 # ChangeLog for virtual/perl-Test-Simple
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.40 2009/05/31 07:34:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.43 2009/07/07 02:28:08 jer Exp $
+
+  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> perl-Test-Simple-0.80.ebuild:
+  Stable for HPPA too.
+
+*perl-Test-Simple-0.92 (04 Jul 2009)
+
+  04 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Test-Simple-0.92.ebuild:
+  Version bump
+
+*perl-Test-Simple-0.90 (03 Jul 2009)
+
+  03 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Test-Simple-0.90.ebuild:
+  Version bump
 
 *perl-Test-Simple-0.88 (31 May 2009)
 
